// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow manually requesting a diff 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should notify the user when updating an existing comment 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |
| \`hi\` | ho | howdy |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;
